--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta name="google-site-verification" content="OzyMxlqbueKSG6UF7XFgFCFGPgLc6Y2TfQfMwLsMSsc" />
          <meta charset="UTF-8">
         <meta name="viewport"  content="width=device-width, initial-scale=1.0">
         <meta name="description" content="ce site répond aux question que l'on ne trouve pas des réponses">
