--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </b></b>
 
         <div>
-            <a href="Luxe media.html">
+            <a href="Réponse aux questions non répondues.html.html">
                 <button id="article">
                     Réponse aux questions non réponu
                 </button>
