Update Réponse aux questions non répondues.html

--- a/Réponse aux questions non répondues.html
+++ b/Réponse aux questions non répondues.html
@@ -49,11 +49,14 @@ function ajouterCommentaire() {
                     </select>
                   </button>
                 </ul>
+                <ul>
+                    <li>Réponse aux questions non répondues</li>
+                </ul>
             </nav>
         </header> <br><br><br><br><br><br><br><br>
       
-    <br><br>
-    <h1>Réponse aux question non répondu</h1>
+
+    <h1>Réponse aux questions non répondues</h1>
 
     <p>
         Dans cet article, comme le dit le titre a pour fin répondre à des questions qui n'ont pas des réponses ou encore des réponses argumentées, comme par exemple qu'est ce qui vient avant entre l'œuf et la poule une question que beaucoup des gens se posent mais ne parviennent pas ou ne veulent pas réfléchir ; en même temps il donne aussi quelques leçons, astuces de vie après avoir bien évidemment traiter les problèmes ;
