Update Réponse aux questions non répondues.html

--- a/Réponse aux questions non répondues.html
+++ b/Réponse aux questions non répondues.html
@@ -27,7 +27,7 @@ function ajouterCommentaire() {
         document.getElementById("nameInput").value = "";
         document.getElementById("commentInput").value = "";
     }
-}
+}s
 
         </script>
     </head>
@@ -59,7 +59,7 @@ function ajouterCommentaire() {
     
 
     <p>
-        Dans cet article, comme le dit le titre a pour fin répondre à des questions qui n'ont pas des réponses ou encore des réponses argumentées, comme par exemple qu'est ce qui vient avant entre l'œuf et la poule une question que beaucoup des gens se posent mais ne parviennent pas ou ne veulent pas réfléchir ; en même temps il donne aussi quelques leçons, astuces de vie après avoir bien évidemment traiter les problèmes ;
+        Cet article, comme le dit le titre a pour fin de répondre à des questions qui n'ont pas des réponses ou encore qui ont des réponses mais non argumentées, comme par exemple qu'est ce qui vient avant entre l'œuf et la poule une question que beaucoup des gens se posent mais ne parviennent à répondre pas ou ne veulent pas répondre ; en même temps il donne aussi quelques leçons, astuces de vie après avoir bien évidemment traiter les problèmes ;
     </p> <br><br>
     <p id="center"> Les questions nous répondront dans la suite de notre rédaction sont les suivante:  <br>
 
