--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <select name="" id="">
                         <option value="">menu</option>
                         <option value=""><a href="index.html">accueil</a></option>
-                        <option value=""><a href="">nous contacter</a></option>
+                        <option value=""><a href="contact luxe media.html">nous contacter</a></option>
                     </select>
                   </button>
                 </ul>
