Update Réponse aux questions non répondues.html

--- a/Réponse aux questions non répondues.html
+++ b/Réponse aux questions non répondues.html
@@ -44,7 +44,7 @@ function ajouterCommentaire() {
                   
                     <select name="" id="">
                         <option value="">menu</option>
-                        <option value=""><a href="index.html">accueil</a></option>
+                        <option value="<a href="index.html"></a>"><a href="index.html">accueil</a></option>
                         <option value=""><a href="contact luxe media.html">nous contacter</a></option>
                     </select>
                   </button>
