Update Réponse aux questions non répondues.html

--- a/Réponse aux questions non répondues.html
+++ b/Réponse aux questions non répondues.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="index, follow">
         <title>Réponse aux questions non répondues</title>
         <link rel="stylesheet" href="luxe media.css">
-        <script>
+        <script src="luxe media.js">
             // Fonction pour ajouter un commentaire
 function ajouterCommentaire() {
     // Récupère le nom de la personne et le commentaire
@@ -42,10 +42,10 @@ function ajouterCommentaire() {
                     
                   <button id="left"> 
                   
-                    <select name="" id="">
+                    <select name="" "id="selectMenu" onchange="goToPage()">
                         <option value="">menu</option>
-                        <option value="<a href="index.html"></a>"><a href="index.html">accueil</a></option>
-                        <option value=""><a href="contact luxe media.html">nous contacter</a></option>
+                        <option value="index.html">accueil</option>
+                        <option value="contact luxe media.html">nous contacter</option>
                     </select>
                   </button>
                 </ul>
