Update Réponse aux questions non répondues.html

--- a/Réponse aux questions non répondues.html
+++ b/Réponse aux questions non répondues.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="index, follow">
         <title>Réponse aux questions non répondues</title>
         <link rel="stylesheet" href="luxe media.css">
-        <script src="luxe media.jS">
+        <script>
             // Fonction pour ajouter un commentaire
 function ajouterCommentaire() {
     // Récupère le nom de la personne et le commentaire
@@ -30,6 +30,7 @@ function ajouterCommentaire() {
 }s
 
         </script>
+        <script src="luxe media.js"></script>
     </head>
     <body>
          <header>
