--- a/comment.html
+++ b/comment.html
@@ -12,6 +12,7 @@
         <div id="comments">
             <!-- Comment Section -->
         </div>
+         <input type="text" id="nameInput" placeholder="Your Name">
         <textarea id="commentInput" placeholder="Add your comment"></textarea>
         <button onclick="addComment()">Add Comment</button>
     </div>
