Update Réponse aux questions non répondues.html

--- a/Réponse aux questions non répondues.html
+++ b/Réponse aux questions non répondues.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="luxe media.css">
        
         <script src="luxe media.js"></script>
+        <script src="script.js"></script>
     </head>
     <body>
          <header>
@@ -229,6 +230,15 @@ Alors actuellement c’est plus courant de voir les parents obliger à leurs enf
     
 </div> <br><br><br>
 
+        <div class="container">
+        <h1>Comment Section</h1>
+        <div id="comments">
+            <!-- Comment Section -->
+        </div>
+         <input type="text" id="nameInput" placeholder="Your Name"><br>
+        <textarea id="commentInput" placeholder="Add your comment"></textarea>
+        <button onclick="addComment()">Add Comment</button>
+    </div>
 
 
     </body>
