Update Réponse aux questions non répondues.html

--- a/Réponse aux questions non répondues.html
+++ b/Réponse aux questions non répondues.html
@@ -235,7 +235,8 @@ Alors actuellement c’est plus courant de voir les parents obliger à leurs enf
         <div id="comments">
             <!-- Comment Section -->
         </div>
-         <input type="text" id="nameInput" placeholder="Your Name"><br>
+         <input type="text" id="nameInput" placeholder="Your Name"><br><br>
+
         <textarea id="commentInput" placeholder="Add your comment"></textarea>
         <button onclick="addComment()">Add Comment</button>
     </div>
