Update Réponse aux questions non répondues.html

--- a/Réponse aux questions non répondues.html
+++ b/Réponse aux questions non répondues.html
@@ -7,7 +7,58 @@
         <title>Réponse aux questions non répondues</title>
         <link rel="stylesheet" href="luxe media.css">
        
-        <script src="luxe media.js"></script>
+        <script src="luxe media.js">
+            document.addEventListener('DOMContentLoaded', function () {
+    loadComments(); // Charger les commentaires lors du chargement de la page
+
+    var addCommentBtn = document.getElementById('addCommentBtn');
+    addCommentBtn.addEventListener('click', function () {
+        addComment();
+    });
+});
+
+function addComment() {
+    var nameInput = document.getElementById('nameInput').value;
+    var commentInput = document.getElementById('commentInput').value;
+    if (nameInput.trim() === '' || commentInput.trim() === '') {
+        alert('Please enter your name and a comment.');
+        return;
+    }
+
+    var commentDiv = document.createElement('div');
+    commentDiv.className = 'comment';
+    commentDiv.innerHTML = '<strong>' + nameInput + ':</strong> ' + commentInput;
+
+    document.getElementById('comments').appendChild(commentDiv);
+    document.getElementById('nameInput').value = '';
+    document.getElementById('commentInput').value = '';
+
+    saveComment(nameInput, commentInput); // Enregistrer le commentaire
+}
+
+function saveComment(name, comment) {
+    var comments = getCommentsFromStorage();
+    comments.push({ name: name, comment: comment });
+    localStorage.setItem('comments', JSON.stringify(comments));
+}
+
+function loadComments() {
+    var comments = getCommentsFromStorage();
+    var commentsContainer = document.getElementById('comments');
+    comments.forEach(function(item) {
+        var commentDiv = document.createElement('div');
+        commentDiv.className = 'comment';
+        commentDiv.innerHTML = '<strong>' + item.name + ':</strong> ' + item.comment;
+        commentsContainer.appendChild(commentDiv);
+    });
+}
+
+function getCommentsFromStorage() {
+    var comments = localStorage.getItem('comments');
+    return comments ? JSON.parse(comments) : [];
+}
+
+        </script>
         
     </head>
     <body>
