Update Réponse aux questions non répondues.html

--- a/Réponse aux questions non répondues.html
+++ b/Réponse aux questions non répondues.html
@@ -282,14 +282,14 @@ Alors actuellement c’est plus courant de voir les parents obliger à leurs enf
 </div> <br><br><br>
 
         <div class="container">
-        <h1>Comment Section</h1>
+        <h1>Commentaire</h1>
         <div id="comments">
             <!-- Comment Section -->
         </div>
-         <input type="text" id="nameInput" placeholder="Your Name"><br><br>
+         <input type="text" id="nameInput" placeholder="Votre nom complet"><br><br>
 
         <textarea id="commentInput" placeholder="Add your comment"></textarea>
-        <button onclick="addComment()">Add Comment</button>
+        <button onclick="addComment()">Commenter</button>
     </div>
 
 
