Update Réponse aux questions non répondues.html

--- a/Réponse aux questions non répondues.html
+++ b/Réponse aux questions non répondues.html
@@ -7,7 +7,8 @@
         <title>Réponse aux questions non répondues</title>
         <link rel="stylesheet" href="luxe media.css">
        
-        <script src="luxe media.js">
+        <script src="luxe media.js"></script>
+        <script">
             document.addEventListener('DOMContentLoaded', function () {
     loadComments(); // Charger les commentaires lors du chargement de la page
 
