Update Réponse aux questions non répondues.html

--- a/Réponse aux questions non répondues.html
+++ b/Réponse aux questions non répondues.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="luxe media.css">
        
         <script src="luxe media.js"></script>
-        <script" src="script.js"></script>
+        <script src="script.js"></script>
         
     </head>
     <body>
