--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="robots" content="index, follow">
         <title>Luxe media</title>
         <link rel="stylesheet" href="luxe media.css">
+         <link rel="icon" href="LOGOLM.jpg">
        <script src="luxe media.js"></script>
         <script src="https://js.pusher.com/beams/1.0/push-notifications-cdn.js"></script>
         <script>
