Update Réponse aux questions non répondues.html

--- a/Réponse aux questions non répondues.html
+++ b/Réponse aux questions non répondues.html
@@ -9,7 +9,7 @@
          <link rel="icon" href="LOGOLM.jpg">
 
         <script src="script.js"></script>
-        <script src="luxe media.js">
+        <script src="luxe .js">
         </script>
         
     </head>
