Update contact luxe media.html

--- a/contact luxe media.html
+++ b/contact luxe media.html
@@ -6,6 +6,7 @@
         <meta name="description" content="ce site répond aux question que l'on ne trouve pas des réponses">
         <meta name="robots" content="index, follow">
         <title>contacter luxe media</title>
+         <link rel="icon" href="LOGOLM.jpg" type="image/jpg">
         <link rel="stylesheet" href="luxe media.css">
          <script src="luxe media.js"></script>
     </head>
