--- a/index.html
+++ b/index.html
@@ -1,31 +1,11 @@
 <html>
     <head>
-        <meta name="google-site-verification" content="OzyMxlqbueKSG6UF7XFgFCFGPgLc6Y2TfQfMwLsMSsc" />
-         <meta charset="UTF-8">
+        <meta charset="UTF-8">
         <meta name="viewport"  content="width=device-width, initial-scale=1.0">
         <meta name="description" content="ce site répond aux question que l'on ne trouve pas des réponses">
-        <meta name="robots" content="index, follow">
         <title>Luxe media</title>
         <link rel="stylesheet" href="luxe media.css">
-         <link rel="icon" href="LOGOLM.jpg" type="image/jpg">
-       <script src="luxe media.js"></script>
-        <script src="https://js.pusher.com/beams/1.0/push-notifications-cdn.js"></script>
-        <script>
-  const beamsClient = new PusherPushNotifications.Client({
-    instanceId: '48c75993-2621-4320-bf0c-29350223d7ae',
-  });
-
-  beamsClient.start()
-    .then(() => beamsClient.addDeviceInterest('hello'))
-    .then(() => console.log('Successfully registered and subscribed!'))
-    .catch(console.error);
-</script>
-    </head>
-    <body>
-       <html>
-    <head>
-        <title>Luxe media</title>
-        <link rel="stylesheet" href="luxe media.css">
+        <script src="luxe media.js"></script>
     </head>
     <body>
         <header>
@@ -44,6 +24,21 @@
                         <option value="contact luxe media.html">nous contacter</option>
                     </select>
                   </button>
+
+                  <li id="act">
+                    <a href="actualite.html">
+                        <button  id="actualite">
+                            Actualité
+                        </button>
+                    </a>
+                   </li>
+
+                   <li id="act">
+                        <a href="https://14b0b281.sibforms.com/serve/MUIFABrB48t7vIgH8eB4gfJbllX_JihSKK_h1hUkBxqKKBzrr_FWDwkDH-o7uz8F6t4Wk5CTErwfIYGaCS2M-Cn7sZ5eSEjZzAGwhDA80s2iXy8Dw2RfM2qLY4Ft2VxVFT8-gyNnHFK1dqhHJRccuqfPpYra7VFQ_C_5ivoBIraDv9ltnPDuqdW4rlAVm1hPXJdCLj49yYHFnPLG">
+                            <button id="ab">S'abonner</button>
+                        </a>
+                   </li> <br>
+
                 </ul>
             </nav>
         </header> <br><br><br><br><br><br><br><br>
@@ -52,13 +47,11 @@
         <div>
             <a href="Réponse aux questions non répondues.html">
                 <button id="article">
-                    Réponse aux questions non répondues
+                    Réponse aux questions non réponu
                 </button>
             </a> <br>
-               Cet article, comme le dit le titre a pour fin de répondre à des questions qui n'ont pas des réponses ou encore qui ont des réponses mais non argumentées, comme par exemple qu'est ce qui vient avant entre l'œuf et la poule une question que beaucoup des gens se posent mais...      
+            Cet article, comme le dit le titre a pour fin de répondre à des questions qui n'ont pas des réponses ou encore qui ont des réponses mais non argumentées, comme par exemple qu'est ce qui vient avant entre l'œuf et la poule une question que beaucoup des gens se posent mais...      
+
         </div>
-    
-    </body>
-</html>
     </body>
 </html>
