--- a/actmus8mars2024.html
+++ b/actmus8mars2024.html
@@ -44,6 +44,9 @@
                 </ul>
             </nav>
         </header> <br><br><br><br><br><br><br><br><br>
+
+          <a href="actualite8mars.html"><button id="retour">Retour</button></a> <br><br><br><br>
+        
         <h1>votre résumé de l'actualité se présente comme suit:</h1>
         <p>
             <h2>Asie:</h2>
