--- a/actualite.html
+++ b/actualite.html
@@ -7,58 +7,7 @@
         <title>Actualité</title>
         <link rel="stylesheet" href="luxe media.css">
         <link rel="icon" href="LOGOLM.jpg" type="image/jpg">
-        <script src="luxe media.js">
-            document.addEventListener('DOMContentLoaded', function () {
-    loadComments(); // Charger les commentaires lors du chargement de la page
-
-    var addCommentBtn = document.getElementById('addCommentBtn');
-    addCommentBtn.addEventListener('click', function () {
-        addComment();
-    });
-});
-
-function addComment() {
-    var nameInput = document.getElementById('nameInput').value;
-    var commentInput = document.getElementById('commentInput').value;
-    if (nameInput.trim() === '' || commentInput.trim() === '') {
-        alert('Please enter your name and a comment.');
-        return;
-    }
-
-    var commentDiv = document.createElement('div');
-    commentDiv.className = 'comment';
-    commentDiv.innerHTML = '<strong>' + nameInput + ':</strong> ' + commentInput;
-
-    document.getElementById('comments').appendChild(commentDiv);
-    document.getElementById('nameInput').value = '';
-    document.getElementById('commentInput').value = '';
-
-    saveComment(nameInput, commentInput); // Enregistrer le commentaire
-}
-
-function saveComment(name, comment) {
-    var comments = getCommentsFromStorage();
-    comments.push({ name: name, comment: comment });
-    localStorage.setItem('comments', JSON.stringify(comments));
-}
-
-function loadComments() {
-    var comments = getCommentsFromStorage();
-    var commentsContainer = document.getElementById('comments');
-    comments.forEach(function(item) {
-        var commentDiv = document.createElement('div');
-        commentDiv.className = 'comment';
-        commentDiv.innerHTML = '<strong>' + item.name + ':</strong> ' + item.comment;
-        commentsContainer.appendChild(commentDiv);
-    });
-}
-
-function getCommentsFromStorage() {
-    var comments = localStorage.getItem('comments');
-    return comments ? JSON.parse(comments) : [];
-}
-
-        </script>
+        <script src="luxe media.js"></script>
     </head>
     <body>
         <header>
@@ -98,6 +47,14 @@ function getCommentsFromStorage() {
             </nav>
         </header> <br><br><br><br><br><br> <br><br><br><br>
       
+        <div>
+            <a href="actualité9mars.html">
+                <button id="article">
+                    Actualité du 9 mars 2024
+
+                </button>
+            </a>
+        </div>
         <div>
             <a href="actualite8mars.html">
                 <button id="article">
