--- a/actmus8mars2024.html
+++ b/actmus8mars2024.html
@@ -85,7 +85,10 @@ Collaboration surprise en Égypte : <br> Les icônes de la musique égyptienne, 
             <h2>Amérique:</h2>
         </p>
 
-        <br><br><br><br><br>
+        <br><br><br>
+                Si ceci vous a plu n'hésitez pas à vous abonner pour être notifié de la mise en ligne de l'actualité du jour ou de nous contactez pour poser des questions ou faire une suggestion.
+
+        <br><br>
         
     
     </body>
