--- a/actmus8mars2024.html
+++ b/actmus8mars2024.html
@@ -4,7 +4,7 @@
         <meta name="viewport"  content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="robots" content="index, follow">
-        <title></title>
+        <title>Actualitédu8mars2024</title>
         <link rel="stylesheet" href="luxe media.css">
         <link rel="icon" href="LOGOLM.jpg" type="image/jpg">
         <script src="luxe media.js"></script>
