--- a/actmus9mars2024.html
+++ b/actmus9mars2024.html
@@ -4,7 +4,7 @@
         <meta name="viewport"  content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="robots" content="index, follow">
-        <title></title>
+        <title>Actualitédu9mars2024</title>
         <link rel="stylesheet" href="luxe media.css">
         <link rel="icon" href="LOGOLM.jpg" type="image/jpg">
         <script src="luxe media.js"></script>
@@ -79,7 +79,10 @@ Une nouvelle plateforme de streaming musical appelée “MelodyWave” a été l
 
         </p>
 
-        <br><br><br><br><br>
+        <br><br><br>
+                Si ceci vous a plu n'hésitez pas à vous abonner pour être notifié de la mise en ligne de l'actualité du jour ou de nous contactez pour poser des questions ou faire une suggestion.
+
+        <br><br>
         
     
     </body>
