--- a/actpol9mars2024.html
+++ b/actpol9mars2024.html
@@ -4,7 +4,7 @@
         <meta name="viewport"  content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="robots" content="index, follow">
-        <title></title>
+        <title>Actualitédu9mars2024</title>
         <link rel="stylesheet" href="luxe media.css">
         <link rel="icon" href="LOGOLM.jpg" type="image/jpg">
         <script src="luxe media.js"></script>
@@ -123,7 +123,10 @@ Haïti: <br>
 Le Secrétaire général de l’ONU, António Guterres, s’est dit profondément préoccupé par la détérioration rapide de la situation sécuritaire à Port-au-Prince, où des bandes armées ont intensifié leurs attaques contre des infrastructures cruciales. <br>
         </p>
 
-        <br><br><br><br><br>
+        <br><br><br>
+                Si ceci vous a plu n'hésitez pas à vous abonner pour être notifié de la mise en ligne de l'actualité du jour ou de nous contactez pour poser des questions ou faire une suggestion.
+
+        <br><br>
         
     
     </body>
