--- a/actspo8mars2024.html
+++ b/actspo8mars2024.html
@@ -4,7 +4,7 @@
         <meta name="viewport"  content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="robots" content="index, follow">
-        <title>Actualitésportive8mars2024</title>
+        <title>Actualitédu8mars2024</title>
         <link rel="stylesheet" href="luxe media.css">
         <link rel="icon" href="LOGOLM.jpg" type="image/jpg">
         <script src="luxe media.js"></script>
@@ -87,7 +87,10 @@ Championnat d’Europe de patinage artistique : <br> Les patineurs artistiques e
             <h2></h2>
         </p>
 
-        <br><br><br><br><br>
+        <br><br><br>
+                Si ceci vous a plu n'hésitez pas à vous abonner pour être notifié de la mise en ligne de l'actualité du jour ou de nous contactez pour poser des questions ou faire une suggestion.
+
+        <br><br>
         
     
     </body>
