--- a/actspo9mars2024.html
+++ b/actspo9mars2024.html
@@ -4,7 +4,7 @@
         <meta name="viewport"  content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="robots" content="index, follow">
-        <title></title>
+        <title>Actualitédu9mars2024</title>
         <link rel="stylesheet" href="luxe media.css">
         <link rel="icon" href="LOGOLM.jpg" type="image/jpg">
         <script src="luxe media.js"></script>
@@ -92,7 +92,10 @@ MMA : <br>
 L’un des combats de MMA les plus attendus de l’année 2024 a eu lieu. La légende américaine de l’UFC, Dustin Poirier, a affronté la nouvelle figure des arts martiaux mixtes en France, Benoît Saint Denis, en Floride. <br>
         </p>
 
-        <br><br><br><br><br>
+        <br><br><br>
+                Si ceci vous a plu n'hésitez pas à vous abonner pour être notifié de la mise en ligne de l'actualité du jour ou de nous contactez pour poser des questions ou faire une suggestion.
+
+        <br><br>
         
     
     </body>
